# web-server-binding

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json
.claude/: .gitignore
.claude/rules/: code-coverage.md  github-actions.md  github-workflows.md  rust-integration-tests.md
.github/workflows/: clippy.yml  coverage.yml  test.yml
web_server_binding/: Cargo.toml
web_server_binding/src/: lib.rs  poll_until_ready.rs  readiness_polling_options.rs  tcp_port_reservation.rs  wait_until_tcp_port_ready.rs  wait_until_unix_socket_ready.rs  web_server_binding.rs
web_server_binding/tests/: tcp_port_reservation_binds_loopback.rs  tcp_port_reservation_holds_port_until_dropped.rs  tcp_port_reservation_into_local_addr_dropping_listener_releases_port.rs  tcp_port_reservation_into_tcp_listener_exposes_handoff.rs  tcp_port_reservation_pick_free_for_propagates_bind_error.rs  web_server_binding_binds_when_given_socket_addr.rs  web_server_binding_into_tcp_listener_propagates_bind_error.rs  web_server_binding_returns_pre_bound_listener.rs
